# sistema-de-dados

./: .env.example  .gitattributes  .gitignore  AMBIENTE.md  CAMBIO.md  CLAUDE.md  DB_SCHEMAS.md  INFLATION.md  README.md  RESERVAS.md  macro-platform-architecture-research_revised1.md  pyproject.toml
.claude/agents/: cambio-analyst.md
.claude/commands/: add.md  sync-vault.md
.claude/rules/: domain-scripts.md
agent_bibliography/: BIBLIOGRAPHY_METHODOLOGY.md  exchange_rate_bibliography_gaps.md
agent_bibliography/exchange_rate_policy/: capital_mobility_exchange_rates_regimes (R. A. Mundell, 1963).md  depreciation_pass_through (Goldfajn, 2000).md  equilibrium_exchange_brazil(Paiva, 2006), .md  exchange_rate_calculation (CFA L1, 2025).md  exchange_rate_understanding_equilibrium (CFA L2, 2025).md  gsdeer_manual_guide (Goldman, 2025).md  kinea_fx_mental_models.md  verde_fx_mental_models.md  (+2 more)
connectors/: CLAUDE.md  bcb.py  bis.py  cftc.py  comexstat.py  comexstat_bulk.py  fred.py  ibge.py  ipeadata.py  mysql.py
embeddings_test/: test_embeddings.py
ingestion/: INGESTION.md  clean.py  clean_code.py  compare.py  compare_report.md  extract.py  ingestion_context.md  run.py  run_code.py
jobs/: update_analytics.py  update_cambio.py  update_db.py  update_international.py  update_oraculo.py
project_docs/: macro-architecture-map_clean_simpler_version.html  macro-architecture-map_v2.html
quarantine/: reservoirs.py
repository/: BIBLIOGRAPHY_METHODOLOGY.md  CLAUDE.md
tests/: test_ibge2.py
utils/: extract_pdf.py  split_pdf_smart.py  thermometer.py  transforms.py
(+375 files in other folders)
